# RAG_Course

./: app.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/4d5c948a-5b7e-4b83-9bb0-e688d802980a/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
