[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.2",
    "pymupdf>=1.25.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
]
